[gd_scene load_steps=15 format=2]

[ext_resource path="res://interface/ServerState.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Text-10-O1.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/gui/images/ui-stats-p-M00.png" type="Texture" id=3]
[ext_resource path="res://assets/gui/images/ui-stats-n-M00.png" type="Texture" id=4]
[ext_resource path="res://assets/gui/images/ui-stats-h-M00.png" type="Texture" id=5]
[ext_resource path="res://assets/gui/images/ui-stats-n-M03.png" type="Texture" id=6]
[ext_resource path="res://assets/gui/images/ui-stats-p-M01.png" type="Texture" id=7]
[ext_resource path="res://assets/gui/images/ui-stats-n-M02.png" type="Texture" id=8]
[ext_resource path="res://assets/gui/images/ui-stats-h-M01.png" type="Texture" id=9]
[ext_resource path="res://assets/gui/images/ui-stats-n-M01.png" type="Texture" id=10]
[ext_resource path="res://assets/gui/images/ui-stats-p-M02.png" type="Texture" id=11]
[ext_resource path="res://assets/gui/images/ui-stats-h-M02.png" type="Texture" id=12]
[ext_resource path="res://assets/gui/images/ui-stats-h-M03.png" type="Texture" id=13]
[ext_resource path="res://assets/gui/images/ui-stats-p-M03.png" type="Texture" id=14]

[node name="ServerState" type="MarginContainer"]
unique_name_in_owner = true
margin_right = 216.0
margin_bottom = 540.0
mouse_filter = 2
size_flags_horizontal = 8
size_flags_vertical = 3
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 8
custom_constants/margin_bottom = 16
script = ExtResource( 1 )
stats_h_a = ExtResource( 5 )
stats_h_b = ExtResource( 9 )
stats_h_c = ExtResource( 12 )
stats_h_d = ExtResource( 13 )
stats_n_a = ExtResource( 4 )
stats_n_b = ExtResource( 10 )
stats_n_c = ExtResource( 8 )
stats_n_d = ExtResource( 6 )
stats_p_a = ExtResource( 3 )
stats_p_b = ExtResource( 7 )
stats_p_c = ExtResource( 11 )
stats_p_d = ExtResource( 14 )

[node name="StateList" type="VBoxContainer" parent="."]
margin_left = 8.0
margin_top = 16.0
margin_right = 208.0
margin_bottom = 524.0
rect_min_size = Vector2( 200, 0 )
mouse_filter = 2
size_flags_vertical = 3
custom_constants/separation = 6

[node name="MarginContainer" type="MarginContainer" parent="StateList"]
margin_right = 200.0
margin_bottom = 58.0
mouse_filter = 2
custom_constants/margin_right = 0
custom_constants/margin_top = 8

[node name="StateInfoBox" type="VBoxContainer" parent="StateList/MarginContainer"]
unique_name_in_owner = true
margin_top = 8.0
margin_right = 200.0
margin_bottom = 58.0

[node name="ConnectedLabel" type="Label" parent="StateList/MarginContainer/StateInfoBox"]
unique_name_in_owner = true
modulate = Color( 0.815686, 0.815686, 0.815686, 1 )
margin_right = 200.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 289, -121 )
custom_fonts/font = ExtResource( 2 )
text = "None - Connected"
align = 2

[node name="AccountLabel" type="Label" parent="StateList/MarginContainer/StateInfoBox"]
unique_name_in_owner = true
modulate = Color( 0.815686, 0.815686, 0.815686, 1 )
margin_top = 18.0
margin_right = 200.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 289, -121 )
custom_fonts/font = ExtResource( 2 )
text = "None - Account"
align = 2

[node name="ActorLabel" type="Label" parent="StateList/MarginContainer/StateInfoBox"]
unique_name_in_owner = true
modulate = Color( 0.815686, 0.815686, 0.815686, 1 )
margin_top = 36.0
margin_right = 200.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 2 )
text = "None - Actor"
align = 2

[node name="VSeparator" type="VSeparator" parent="StateList"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 64.0
margin_right = 200.0
margin_bottom = 476.0
mouse_filter = 2
size_flags_vertical = 3

[node name="StatusBtn" type="TextureButton" parent="StateList"]
unique_name_in_owner = true
margin_left = 178.0
margin_top = 482.0
margin_right = 200.0
margin_bottom = 508.0
focus_mode = 0
size_flags_horizontal = 8
size_flags_vertical = 8
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 4 )
texture_focused = ExtResource( 4 )

[connection signal="mouse_entered" from="StateList/StatusBtn" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="StateList/StatusBtn" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="StateList/StatusBtn" to="." method="_on_mouse_pressed"]
